# aviutl-mcp

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  README.md
docs/: design.md  ipc_protocol.md
mcp_server/: main.py  pyproject.toml
mcp_server/assets/system/param_node/: テキスト.yaml  標準描画.yaml
mcp_server/src/aviutl_mcp_server/: assets.py  exo.py  param_node.py  plugin_ipc.py  types.py
mcp_server/tests/: test_exo.py  test_param_node.py
plugin/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
plugin/src/: exedit_handler.cpp  exedit_handler.h  log.cpp  log.h  mcp_plugin.cpp  mcp_plugin.h  pipe_command.h  pipe_server.cpp  pipe_server.h  plugin.cpp  string_helper.h  thread_manager.h  thread_safe_queue.h
