[project]
name = "aviutl-mcp-server"
version = "0.1.dev0"
description = "AviUtl integration throgh the Model Control Protocol (MCP) server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "exofile",
    "exolib",
    "mcp[cli]>=1.6.0",
    "pywin32>=310",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
aviutl-mcp-server = { workspace = true }
exofile = { git = "https://github.com/Tikubonn/exofile.git" }
exolib = { git = "https://github.com/Tikubonn/exolib.git" }

[project.urls]
Homepage = "https://github.com/karoterra/aviutl-mcp"

[[tool.mypy.overrides]]
module = ["exofile", "exolib"]
ignore_missing_imports = true
